        * #999 - Fixed BuildTarget.iOS reference when using Unity 4.x.
        * #1004 - Upgrading from older version of plugin did not remove unused files.
        * #1010 - Updated documentation about which Android SDK components
            are needed.
        * Updated dependency pattern for android-support-v4 to be 23.1+.
    New Features:
        Play-services-jar resolver update to 1.1.1.
            See https://github.com/googlesamples/unity-jar-resolver/blob/master/CHANGELOG.md
            for details on the changes.
Version 0.9.31a
    Bug Fixes:
        * #977 - IsConnectedToRoom always returned false, causing local player
                to be removed from real time multiplayer room.
        * #971 - NO_GPGS did not remove the Cocoapod dependencies corrrectly.
Version 0.9.31
    New Features:
        * PlayGamesAchievement (the object returned by
            PlayGamesPlatform.LoadAchievements) now includes the current number
            of steps and the total number of steps for the corresponding
            achievement.
        * Play-services-jar-resolver updated to 1.1.  This fixes the
            problem of include play-services-measurement which has a variable
            in the AndroidManifest.xml file.
    Bug Fixes:
        * #935 include IFDEF to allow editing in unsupported platforms.
Version 0.9.30
    ** BREAKING CHANGES **
        * `PlayerStats` is now a standalone class,
            rather than a subclass of `PlayGamesLocalUser`.
            All existing references to `PlayGamesLocalUser.PlayerStats`
            should now directly refer to `PlayerStats`.
        * The `NumOfSessions` property in `PlayerStats` has been renamed
            `NumberOfSessions` to be consistent with other properties.
    New Features:
        * Rebase PlayerStats API to use the Play Games C++ SDK.
        * PlayerStats API now supported on iOS.
        * Added an option to PlayGamesClientConfiguration to require Google+.