@@ -71,6 +71,9 @@ namespace GooglePlayGames.Editor
         /// <summary>Property key for project settings.</summary>
         public const string IOSSETUPDONEKEY = "ios.SetupDone";
 
+        /// <summary>Property key for plugin version.</summary>
+        public const string PLUGINVERSIONKEY = "proj.pluginVersion";
+
         /// <summary>Property key for nearby settings done.</summary>
         public const string NEARBYSETUPDONEKEY = "android.NearbySetupDone";
 
@@ -94,6 +97,9 @@ namespace GooglePlayGames.Editor
 
         /// <summary>Constant for token replacement</summary>
         private const string IOSBUNDLEIDPLACEHOLDER = "__BUNDLEID__";
+
+        /// <summary>Constant for token replacement</summary>
+        private const string PLUGINVERSIONPLACEHOLDER = "__PLUGIN_VERSION__";
 
         /// <summary>Constant for token replacement</summary>
         private const string TOKENPERMISSIONSHOLDER = "__TOKEN_PERMISSIONS__";
@@ -140,7 +146,8 @@ namespace GooglePlayGames.Editor
                 { IOSCLIENTIDPLACEHOLDER, IOSCLIENTIDKEY },
                 { IOSBUNDLEIDPLACEHOLDER, IOSBUNDLEIDKEY },
                 { TOKENPERMISSIONSHOLDER, TOKENPERMISSIONKEY },
-                { REQUIREGOOGLEPLUSPLACEHOLDER, REQUIREGOOGLEPLUSKEY }
+                { REQUIREGOOGLEPLUSPLACEHOLDER, REQUIREGOOGLEPLUSKEY },
+                { PLUGINVERSIONPLACEHOLDER, PLUGINVERSIONKEY}
             };
 
         /// <summary>
