@@ -20,8 +20,8 @@
         <!-- the space in these forces it to be interpreted as a string vs. int -->
         <meta-data android:name="com.google.android.gms.games.APP_ID"
             android:value="\ __APP_ID__" />
-        <meta-data android:name="com.google.android.gms.appstate.APP_ID"
-            android:value="\ __APP_ID__" />
+        <meta-data android:name="com.google.android.gms.games.unityVersion"
+            android:value="\ __PLUGIN_VERSION__" />
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
